    - additional .menu file with custom extensions to structure 
      sub-categories for packages (stub only currently)
    - use new <SCType> tag
  * softwarecenter/view/availablepane.py:
    - if a subcategory list does not have applications, hide the 
      application view
    - make subqueries more flexible
    - reset subcategories if a search is reset
  * softwarecenter/view/catview.py:
    - move "System Packages" from hardcoded Section into a XML
      file
    - add <Or> support for <Include>
    - support empty queries in .menu
    - support extra tags "SCIcon"
    - support gettext without directory in .menu file
    - support additional software-center.menu file
  * softwarecenter/view/catview.py:
    - fix incompatibility with the development version of xapian
      (thanks to Richard Boulton)
    - fix <Not> tag handling
    - add SCType that matches 

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 15 Dec 2009 09:51:44 +0100

software-center (1.1.4) lucid; urgency=low

  * softwarecenter/db/update.py:
    - honor X-AppInstall-Ignore=true
  * merge from lp:~glatzor/software-center/glatzor, many thanks
  * fixes missing icons/appnames in the progress pane (LP: #493775)
  * debian/control:
    - update aptdaemon dependency

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 14 Dec 2009 11:38:05 +0100

software-center (1.1.3) lucid; urgency=low

  * merge from lp:~robert-ancell/software-center/trunk,
    many thanks

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 09 Dec 2009 19:49:52 +0100

software-center (1.1.2) lucid; urgency=low

  * merge lp:~rugby471/software-center/software-store-andrew,
    many thanks
  * softwarecenter/backend/aptd.py:
    - add "reload" function 
  * softwarecenter/view/appdetailsview.py:
    - if a package is available in the data but we do not have apt
      data for it offer a "reload" button (LP: #466321)
    - fix description for not yet enabled channels (LP: #488060)